Writer: Fix Comment's width when in full view
1. It seems the regression of mislaginged comment started (thanks Joao
for the info) on Pranam's patch:

- https://github.com/CollaboraOnline/online/pull/13223
- https://github.com/CollaboraOnline/online/commit/b6cb253b43afb27f78705c2032b984441b779437

2. Apart from that there is also the problem of the 75% width

Open in full view sets that widget always at 75% of the whole
screen. It shouldn't, it makes it so it's quite hard to read with
without loosing the track of the sentence or without eye strain. As
known, we would benefit from a sentence that is 10 to 14 characters
long. Ideally, we would set the size to reflect that.
- Use ch units to kind know more or less how much is a word in
width to then know 14 words worth of width per line:
  - 1 ch is the width of 0 then let's think that a word on average has
  5 characters (+ 1 space) then: 11*6 = 66 ch

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -588,7 +588,7 @@ body {
 }
 
 .cool-annotation.annotation-pop-up {
-	width: 75%;
+	width: 66ch;
 }
 
 .cool-annotation.tracked-deleted-comment-show {
